// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`existing service page rendering phone 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Make a request
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/search"
          onClick={[Function]}
        >
          Search cases
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          All services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-1d1pmz0": "",
      }
    }
    role="main"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-pmaldw": "",
        }
      }
    />
    <div
      className={
        Object {
          "data-css-1prrpm3": "",
        }
      }
    >
      <div
        className="p-a300 p-a800--xl br br-t400 br--y css-1aypqv0"
        style={Object {}}
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="sh sh--y"
          >
            <h1
              className="sh-title"
            >
              Cosmic Incursion
            </h1>
          </div>
          <div
            className="t--intro m-v300"
          >
            Bad things getting in from other universes
          </div>
          <div
            className="g g--top"
          >
            <div
              className="g--7 m-v500"
            >
              <div
                className="txt"
              >
                <label
                  className="txt-l"
                  htmlFor="QuestionsPane-description"
                  style={
                    Object {
                      "marginTop": 0,
                    }
                  }
                >
                  Description
                </label>
                <textarea
                  className="txt-f"
                  id="QuestionsPane-description"
                  name="description"
                  onChange={[Function]}
                  placeholder="Please describe your request"
                  rows="5"
                  value=""
                />
              </div>
              <div>
                <div
                  className="txt"
                >
                  <label
                    className="txt-l"
                    htmlFor="ST-CMTS"
                  >
                    Please provide any other relevant information:
                     
                  </label>
                  <textarea
                    aria-required={false}
                    className="txt-f"
                    id="ST-CMTS"
                    name="ST-CMTS"
                    onChange={[Function]}
                    rows="5"
                    value=""
                  />
                </div>
              </div>
              <hr
                aria-hidden={true}
                className="hr hr--dash m-v500"
              />
              <div>
                <div
                  className="txt"
                >
                  <label
                    className="txt-l"
                    htmlFor="INFO-CSIRMV1"
                  >
                    **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                     
                  </label>
                  <input
                    aria-required={false}
                    className="txt-f"
                    id="INFO-CSIRMV1"
                    name="INFO-CSIRMV1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <hr
                aria-hidden={true}
                className="hr hr--dash m-v500"
              />
              <div>
                <div
                  aria-labelledby="SR-CSIRMV1-label"
                  role="radiogroup"
                >
                  <div
                    className="m-v300"
                  >
                    <label
                      className="txt-l"
                      id="SR-CSIRMV1-label"
                    >
                      How many dimensions have been breached?
                       
                      <span
                        className="t--req"
                      >
                        Required
                      </span>
                    </label>
                  </div>
                  <div
                    className="g"
                  >
                    <div
                      className="g--12"
                    >
                      <div
                        className="ra"
                      >
                        <input
                          checked={false}
                          className="ra-f"
                          id="SR-CSIRMV1-One"
                          name="SR-CSIRMV1"
                          onChange={[Function]}
                          type="radio"
                          value="One"
                        />
                        <label
                          className="ra-l"
                          htmlFor="SR-CSIRMV1-One"
                        >
                          One
                        </label>
                      </div>
                      <div
                        className="ra"
                      >
                        <input
                          checked={false}
                          className="ra-f"
                          id="SR-CSIRMV1-Two"
                          name="SR-CSIRMV1"
                          onChange={[Function]}
                          type="radio"
                          value="Two"
                        />
                        <label
                          className="ra-l"
                          htmlFor="SR-CSIRMV1-Two"
                        >
                          Two
                        </label>
                      </div>
                      <div
                        className="ra"
                      >
                        <input
                          checked={false}
                          className="ra-f"
                          id="SR-CSIRMV1-Three"
                          name="SR-CSIRMV1"
                          onChange={[Function]}
                          type="radio"
                          value="Three"
                        />
                        <label
                          className="ra-l"
                          htmlFor="SR-CSIRMV1-Three"
                        >
                          Three
                        </label>
                      </div>
                      <div
                        className="ra"
                      >
                        <input
                          checked={false}
                          className="ra-f"
                          id="SR-CSIRMV1-More than Three"
                          name="SR-CSIRMV1"
                          onChange={[Function]}
                          type="radio"
                          value="More than Three"
                        />
                        <label
                          className="ra-l"
                          htmlFor="SR-CSIRMV1-More than Three"
                        >
                          More than Three
                        </label>
                      </div>
                      <span />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="g--5 m-v500"
            >
              <div
                className="br br-a200"
              >
                <div
                  className="css-19ub58"
                  onClick={[Function]}
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  style={Object {}}
                >
                  <img
                    alt=""
                    aria-hidden={true}
                    height="324"
                    src="/assets/img/image-upload.png"
                    style={
                      Object {
                        "display": "block",
                        "height": "auto",
                        "width": "100%",
                      }
                    }
                    width="479"
                  />
                  <input
                    accept="image/*"
                    multiple={false}
                    onChange={[Function]}
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                    type="file"
                  />
                </div>
                <div
                  className="br br-t200"
                  style={
                    Object {
                      "position": "relative",
                    }
                  }
                >
                  <button
                    className="btn btn--w btn--b"
                    onClick={[Function]}
                    style={
                      Object {
                        "visibility": "visible",
                        "width": "100%",
                      }
                    }
                    type="button"
                  >
                    Upload Photo
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="g m-v500 css-1k8tu3j"
          >
            <div
              className="g--9 t--info m-v200 css-hn0yet"
            >
              <span>
                Please fill out 
                <span
                  className="t--req"
                >
                  required
                </span>
                 fields to continue
              </span>
            </div>
            <button
              className="btn g--3"
              disabled={true}
              type="submit"
            >
              Next
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`existing service page rendering phone location step 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Make a request
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/search"
          onClick={[Function]}
        >
          Search cases
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          All services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-1d1pmz0": "",
      }
    }
    role="main"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-pmaldw": "",
        }
      }
    />
    <div
      className={
        Object {
          "data-css-1msyv6a": "",
        }
      }
    >
      <div
        className=" br br-t400 br--y css-1aypqv0"
        style={Object {}}
      >
        <div
          className={
            Object {
              "data-css-1wu02iq": "",
            }
          }
        >
          <div
            className="p-a300 css-jvj6qy"
          >
            <form
              action="#"
              className="sf sf--sm sf--y"
              onSubmit={[Function]}
            >
              <div
                className="sf-i"
              >
                <input
                  aria-label="Address search field"
                  className="sf-i-f"
                  onChange={[Function]}
                  placeholder="Search for a street address or intersection…"
                  type="text"
                  value=""
                />
                <button
                  className="sf-i-b"
                  disabled={true}
                  type="submit"
                >
                  Search
                </button>
              </div>
            </form>
            <div
              className={
                Object {
                  "data-css-129qykh": "",
                }
              }
            >
              <div
                className="m-v400"
              />
            </div>
            <div
              className="g css-1k8tu3j"
            >
              <div
                className="g--7 t--subinfo m-v200"
              >
                <a
                  href="javascript:void(0)"
                  onClick={[Function]}
                >
                  Continue without location
                </a>
              </div>
              <button
                className="btn g--5"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`missing service page rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Make a request
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/search"
          onClick={[Function]}
        >
          Search cases
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          All services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-1d1pmz0": "",
      }
    }
    role="main"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-pmaldw": "",
        }
      }
    />
    <div
      className={
        Object {
          "data-css-1prrpm3": "",
        }
      }
    >
      <div
        className="p-a300 p-a800--xl br br-t400 br--y css-1aypqv0"
        style={Object {}}
      >
        <div
          className="sh sh--y"
        >
          <h1
            className="sh-title"
          >
            Service not found
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;
